sort of fixed the horizontal scroll thing - gave padding on the left side but can't figure out how to put padding on the right side

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -129,6 +129,10 @@ p {
     box-shadow: 2px 8px 10px rgba(0, 0, 0, 0.1), 0px -1px 10px rgba(0, 0, 0, 0.05);
     -webkit-box-shadow: 2px 8px 10px rgba(0, 0, 0, 0.1), 0px -1px 10px rgba(0, 0, 0, 0.05);
 }
+.my-btn-primary:active {
+    box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.1), 0px -1px 10px rgba(0, 0, 0, 0.05);
+    -webkit-box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.1), 0px -1px 10px rgba(0, 0, 0, 0.05);
+}
 .my-btn-secondary {
     background: transparent !important;
     color: #fe8c00;  /* fallback for old browsers */
@@ -177,6 +181,10 @@ p {
     display: flex;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
+}
+.container1::-webkit-scrollbar {
+    width: .01rem;
+    height: .01rem;
 }
 
 
@@ -447,8 +455,8 @@ small {
     -webkit-box-shadow: 2px 8px 10px rgba(0, 0, 0, 0.1), 0px -1px 10px rgba(0, 0, 0, 0.05);
 }
 .card:active {
-    box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25), 0px -2px 8px rgba(0, 0, 0, 0.05);
-    -webkit-box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25), 0px -2px 8px rgba(0, 0, 0, 0.05);
+    box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.1), 0px -1px 10px rgba(0, 0, 0, 0.05);
+    -webkit-box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.1), 0px -1px 10px rgba(0, 0, 0, 0.05);
     background-color:rgb(247, 247, 247) !important;
 }
 
